# s2-py

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  setup.py
lib/s2_py/: __init__.py
s2_py/: __init__.py
